@@ -1,5 +1,10 @@
 Sun Sep  7 07:45:35 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* classify.c (sticky_ck): Change to take an finfo argument rather
+	than several arguments taken from there.  Cleans up the way the
+	calling convention had depended on SERVER_SUPPORT.
+	(Classify_File): Change callers.
+
 	* version.c: Change version number to 1.9.17.
 
 	* Version 1.9.16.
